--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,3 +1,5 @@
+version: '3.8'
+
 services:
   app:
     build: .
@@ -5,6 +7,7 @@ services:
       - "3000:3000"
     volumes:
       - .:/usr/src/app
+      - node_modules:/usr/src/app/node_modules
     depends_on:
       - db
     environment:
@@ -26,3 +29,4 @@ services:
 
 volumes:
   db_data:
+  node_modules:
