Implement full currency add/update support and restructure models

--- a/.env
+++ b/.env
@@ -11,3 +11,6 @@ JWT_EXPIRES_IN=7d
 EXCHANGE_API_KEY=8939f69a54818d490aacd2fdc98f10a8
 
 DEFAULT_LANG=en 
+
+# docker exec -it currency_system-app-1 sh
+# npx sequelize-cli db:migrate
