--- a/package.json
+++ b/package.json
@@ -25,10 +25,11 @@
     "multer": "^1.4.5-lts.1",
     "mysql2": "^3.13.0",
     "sequelize": "^6.37.6",
+    "socket.io": "^4.8.1",
     "yup": "^1.6.1"
   },
   "devDependencies": {
     "nodemon": "^3.1.9",
-    "sequelize-cli": "^6.6.2"
+    "sequelize-cli": "^6.6.3"
   }
 }
